# RemoteWebcam

./: .gitignore  .travis.yml  CHANGELOG.txt  CMakeLists.txt  Makefile  ReadMe.txt  RemoteWebcam.sln  RemoteWebcamCli_Release.bat  RemoteWebcamMultiSrv_Release.bat  RemoteWebcamSrv_Release.bat  RemoteWebcam_Bundle.bat  RemoteWebcam_Zip.bat  TODO.txt  mjpeg.html  mjpeg.py
.github/workflows/: github-actions.yml
Backup_vs2008/: RemoteWebcam.sln  RemoteWebcamMultiSrv.vcproj  RemoteWebcamSrv.vcproj
Backup_vs2012/: RemoteWebcam.sln  RemoteWebcamMultiSrv.vcxproj  RemoteWebcamMultiSrv.vcxproj.filters  RemoteWebcamSrv.vcxproj
Backup_vs2017/: RemoteWebcam.sln  RemoteWebcamCli.vcxproj  RemoteWebcamCli.vcxproj.filters  RemoteWebcamMultiSrv.vcxproj  RemoteWebcamSrv.vcxproj  RemoteWebcamSrv.vcxproj.filters
RemoteWebcamCli/: Globals.c  Globals.h  Main.c  RemoteWebcamCli.txt  RemoteWebcamCli.vcproj  RemoteWebcamCli.vcxproj  RemoteWebcamCli.vcxproj.filters
RemoteWebcamMultiSrv/: Globals.c  Globals.cpp  Globals.h  Main.c  Main.cpp  RemoteWebcamMultiSrv.txt  RemoteWebcamMultiSrv.vcproj  RemoteWebcamMultiSrv.vcxproj  RemoteWebcamMultiSrv.vcxproj.filters
RemoteWebcamSrv/: Globals.c  Globals.h  Main.c  RemoteWebcamSrv.txt  RemoteWebcamSrv.vcproj
TODO/: Does the Y-cam support RTSP - MJPEG protocol - Y-cam IP Camera Pro Support.url  How Does Mjpeg Work.url  Motion JPEG Streaming Server - CodeProject.url  damonkohler.com MJPEG Streaming Protocol.url  http - Need to implement a mjpeg stream - Stack Overflow.url
